--- a/T2-R1/ejercicio5.html
+++ b/T2-R1/ejercicio5.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/ej4.js"></script>
+
+    <script src="js/ej5.js"></script>
 </head>
 <body>
     <script>
-        tiempoTranscurrido();
+        opciones();
     </script>
 </body>
 </html>
