--- a/T2-R1/ejercicio7.html
+++ b/T2-R1/ejercicio7.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/ej4.js"></script>
+    
+    <script src="js/ej7.js"></script>
 </head>
 <body>
     <script>
-        tiempoTranscurrido();
+        document.write("El mayor es: " + mayor3());
     </script>
 </body>
 </html>
