Relaciones array completadas

--- a/T3-R3/Ejercicio10.html
+++ b/T3-R3/Ejercicio10.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sistema de Reservas</title>
+
+    <script src="js/ej10.js"></script>
 </head>
 <body>
-    
+
+    <h2>Seleccione el tipo de asiento:</h2>
+    <button onclick="reservarAsiento('First')">First</button>
+    <button onclick="reservarAsiento('Turista')">Turista</button>
+
 </body>
 </html>
