--- a/T3-R3/Ejercicio5.html
+++ b/T3-R3/Ejercicio5.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="js/ej5.js"></script>
 </head>
 <body>
-    
+    <script>
+        paresImpares();
+    </script>
 </body>
 </html>
