--- a/T3-R3/Ejercicio7.html
+++ b/T3-R3/Ejercicio7.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="js/ej7.js"></script>
 </head>
 <body>
-    
+    <script>
+        var array = [1,2,3,4,5,6,8,9,10];
+
+        document.write(array + "<br>");
+        a0(array);
+
+        add1(array);
+
+        separados(array);
+        
+    </script>
 </body>
 </html>
