booking list terminado

--- a/bookList/index.html
+++ b/bookList/index.html
@@ -14,6 +14,7 @@
 
     <main>
         <form id="formulario" action="#" method="get">
+            <input type="text" name="isbn" id="isbn" placeholder="ISBN del libro" required>
             <input type="text" name="title" id="title" placeholder="Título del libro" required>
             <div>
                 <input type="text" name="author" id="author" placeholder="Autor del libro" required>
@@ -25,7 +26,7 @@
             <section id="lista">
                 <h3>List of Books</h3>
             </section>
-            <p>Libros por leer: <span id="contadorLibros">0</span>/<span id="restantes">0</span></p>
+            <p>Libros por leer: <span id="restantes">0</span>/<span id="contadorLibros">0</span></p>
         </div>
     </main>
 </body>
